--- a/src/sagaco/CitaBundle/Resources/views/clCita/registrar.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clCita/registrar.html.twig
@@ -51,20 +51,17 @@
                                 {% for i,  item1 in arrCalendario %} 
                                     <tr>
                                         {% for j, item2 in item1 %}                                        
-                                            <th>
+                                            <th class="text-right">
                                                 {% if j != '1' %}
-                                                <ul class="unstyled">
+                                                <ul class="list-unstyled">
                                                 {% endif %}
                                                     {% for key, item3 in item2 %}
                                                     {# {{ attribute(item2, key).1 }}#}
                                                         
                                                         {% if arrCalendario[i][j][key] != ' ' %}
                                                             {% if j != '1' %}
-                                                                <li>                                                        
-                                                                    <small>{{ arrCalendario[i][j][key] }}</small>
-                                                                    <a href="{{ path('pgCita', { 'id': arrCalendario[i][j][key], 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
-                                                                        <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                                                    </a>
+                                                                <li>                                  
+                                                                    <a href="{{ path('pgCita', { 'id': arrCalendario[i][j][key], 'blnBandera': '0'}) }}"><small>{{ arrCalendario[i][j][key].nbDocente }}</small></a></td>
                                                                 </li> 
                                                             {% else %}
                                                                 <small>{{ arrCalendario[i][j][key] }}</small>
