Actualización en la computadora de papa

--- a/app/Resources/views/plantilla.html.twig
+++ b/app/Resources/views/plantilla.html.twig
@@ -78,14 +78,14 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="navbar-nav nav">
-                    <li class="last dropdown open">
+                    <li class="last dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
                             Administración 1
                             <b class="caret"></b>
                         </a>
                         <ul class="menu_level_1 dropdown-menu">
                             <li class="first">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgBenefiEstudinte/">
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgBenefiEstudiante/">
                                     Beneficiario del estudiante
                                 </a>
                             </li>
@@ -144,6 +144,14 @@
                                     Municipio
                                 </a>
                             </li>
+                        </ul>
+                    </li>
+                    <li class="last dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
+                            Administración 2
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="menu_level_1 dropdown-menu">
                             <li>
                                 <a href="http://localhost/sagaco/web/app_dev.php/pgCiudad/">
                                     Ciudad
@@ -160,6 +168,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoCita/">
+                                    Estado cita
+                                </a>
+                            </li>
+                            <li>
                                 <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoCaso/">
                                     Estado caso
                                 </a>
@@ -169,14 +182,6 @@
                                     Dia semana
                                 </a>
                             </li>
-                        </ul>
-                    </li>
-                    <li class="last dropdown open">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
-                            Administración 2
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="menu_level_1 dropdown-menu">
                             <li class="first">
                                 <a href="http://localhost/sagaco/web/app_dev.php/pgDuracion/">
                                     Duración
@@ -192,17 +197,7 @@
                                     Estado prueba
                                 </a>
                             </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoCita/">
-                                    Estado cita
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgConfigEntrevista/">
-                                    Configuración entrevista
-                                </a>
-                            </li>
-                            <li>
+                           <li>
                                 <a href="http://localhost/sagaco/web/app_dev.php/pgTipoPregunta/">
                                     Tipo pregunta
                                 </a>
@@ -212,9 +207,63 @@
                                     Tipo institución
                                 </a>
                             </li>
-                            <li>
+                            <li class="last">
                                 <a href="http://localhost/sagaco/web/app_dev.php/pgCarrera/">
                                     Carrera
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="last dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
+                            Cita
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="menu_level_1 dropdown-menu">
+                            <li class="first">
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgAgenda/">
+                                    Agenda
+                                </a>
+                            </li>
+                            <li class="last">
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgHorariCita/">
+                                    Horario Citas
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="last dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
+                            Entrevista
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="menu_level_1 dropdown-menu">
+                            <li class="first">
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgConfigEntrevista/">
+                                    Configuración entrevista
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgEntrevContacto/">
+                                    Entrevista de contacto
+                                </a>
+                            </li>
+                            <li class="last">
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgEntrevConsecuentes/">
+                                    Entrevista consecuente
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="last dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
+                            Prueba
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="menu_level_1 dropdown-menu">
+                            <li class="first">
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgInstruDVI/">
+                                    Instrucciones Prueva DVI
                                 </a>
                             </li>
                             <li>
@@ -260,24 +309,6 @@
                             <li class="last">
                                 <a href="http://localhost/sagaco/web/app_dev.php/pgAngeliInteres/">
                                     Angelini interés
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="last dropdown open">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
-                            Cita
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="menu_level_1 dropdown-menu">
-                            <li class="first">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgAgenda/">
-                                    Agenda
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgHorariCita/">
-                                    Horario Citas
                                 </a>
                             </li>
                         </ul>
