--- a/src/sagaco/AdminBundle/Resources/views/clOrientador/registrar.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clOrientador/registrar.html.twig
@@ -6,7 +6,7 @@
     <div class="container navbar-blanca">                
         <ul class="breadcrumb-modi">
             <li><a href="#"><small>Inicio</small></a></li>
-            <li><a href="{{ path('pgOrientador') }}"><small>Orientador</small></a></li>
+            <li><a href="{{ path('pgOrientador') }}"><small>Docente</small></a></li>
             <li class="active"><small>Crear</small></li>
         </ul>                              
     </div> 
@@ -16,7 +16,7 @@
     {% block twigformulario %}        
         <fieldset>
             {# Titulo del requisito #}
-            <legend>Crear orientador
+            <legend>Crear docente
                 <div class="pull-right">
                     <a href="{{ path('pgOrientador') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
                         <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
@@ -29,10 +29,10 @@
                 {{ form_errors(form, { 'global_errors': true }) }}
                 {{ form_row(form._token) }}
                 {{ form_row(form.txProfesion, {'label': 'Profesión'}) }}                    
-                {{ form_row(form.txCarrerAtendida, {'label': 'Carrera atendida'}) }}
                 {{ form_row(form.txPeriodVigencia, {'label': 'Periodo de vigencia'}) }}                    
                 {{ form_row(form.txComentario, {'label': 'Comentario'}) }}
-                {{ form_row(form.coRecursHumano, {'label': 'Nombre del orientador'}) }}
+                {{ form_row(form.coRecursHumano, {'label': 'Docente'}) }}
+                {{ form_row(form.coCarrera, {'label': 'Cambio de especialidad'}) }}
                 <div>
                     <p class="text-left">
                         <small class="text-muted">(</small><small class="text-muted text-danger">*</small><small class="text-muted">) Campos obligatorios</small></p>
