--- a/src/sagaco/AdminBundle/Resources/views/clPersona/index.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clPersona/index.html.twig
@@ -31,10 +31,8 @@
                                 <tr>
                                     {# sorting of properties based on query components #}
                                     <th>{{ knp_pagination_sortable(objPagina, 'Id', 'a.coPersona') }}</th>
-                                    <th{% if objPagina.isSorted('a.inEstudiante') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, '¿Estudiante?', 'a.inGrupoRol') }}</th>
-                                    <th{% if objPagina.isSorted('a.coControEstudio') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Nombre asesorado', 'a.nbGrupoRol') }}</th>
-                                    <th>F. Creación</th>
-                                    <th>F. Actualización</th>
+                                    <th{% if objPagina.isSorted('a.inEstudiante') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, '¿Estudiante?', 'a.inEstudiante') }}</th>
+                                    <th{% if objPagina.isSorted('a.coPersona') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Nombre asesorado', 'a.coPersona') }}</th>                                    
                                     <th>Acción</th>                                
                                 </tr>
                             </thead>
@@ -43,9 +41,13 @@
                                 <tr {% if loop.index is odd %}class="color"{% endif %}>
                                     <td class="text-right"><a href="{{ path('pgPersona_mostrar', { 'id': objEntidad.coPersona, 'blnBandera': '0'}) }}">{{ objEntidad.coPersona }}</a></td>
                                     <td>{{ objEntidad.inEstudiante }}</td>
-                                    <td>{{ objEntidad.coControEstudio }}</td>
-                                    <td>{% if objEntidad.fhCreacion %}{{ objEntidad.fhCreacion|date('d-m-Y H:i:s') }}{% endif %}</td>
-                                    <td>{% if objEntidad.fhActualizacion %}{{ objEntidad.fhActualizacion|date('d-m-Y H:i:s') }}{% endif %}</td>
+                                    <td>{% if objEntidad.inEstudiante == true %}
+                                            {{ objEntidad.coControEstudio }}
+                                        {% else %}
+                                            {{ objEntidad.coRecursHumano }}
+                                        {% endif %}
+                                    </td>
+                                    
                                     <td> 
                                         <a href="{{ path('pgPersona_mostrar', { 'id': objEntidad.coPersona, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
                                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
