--- a/src/sagaco/CitaBundle/Resources/views/clCita/consultar.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clCita/consultar.html.twig
@@ -6,7 +6,7 @@
     <div class="container navbar-blanca">                
         <ul class="breadcrumb-modi">
             <li><a href="#"><small>Inicio</small></a></li>
-            <li class="active"><small>Rol</small></li>
+            <li class="active"><small>Cita</small></li>
         </ul>                              
     </div> 
     {% endblock %}{#-- Fin Barra de ruta --#}
@@ -15,7 +15,7 @@
     {% block twigformulario %}
         <fieldset>
             {# Titulo del requisito #}
-            <legend>Listar rol
+            <legend>Listar citas del día
                 <div class="pull-right">
                     <a href="{{ path('pgCita_consultar') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Crear">
                         <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
@@ -31,10 +31,13 @@
                         <tr>
                             {# sorting of properties based on query components #}
                             <th>{{ knp_pagination_sortable(objPagina, 'Id', 'a.coCita') }}</th>
-                            <th{% if objPagina.isSorted('a.coOrientador') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Orientador', 'a.coOrientador') }}</th>
-                            <th{% if objPagina.isSorted('a.coOrientador') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Persona', 'a.coOrientador') }}</th>
-                            <th>F. Creación</th>
-                            <th>F. Actualización</th>                                
+                            <th{% if objPagina.isSorted('a.coPersona') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Asesorado', 'a.coPersona') }}</th>
+                            <th{% if objPagina.isSorted('a.coArea') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Área', 'a.coArea') }}</th>
+                            <th{% if objPagina.isSorted('a.coEstadoCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Estado', 'a.coEstadoCita') }}</th>
+                            <th{% if objPagina.isSorted('a.feCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'F. Cita programada', 'a.feCita') }}</th>
+                            <th{% if objPagina.isSorted('a.hoCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'Hora', 'a.hoCita') }}</th>
+                            <th{% if objPagina.isSorted('a.fhRegistCita') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(objPagina, 'F. Registro', 'a.fhRegistCita') }}</th>
+                            <th>Acción</th>                                
                         </tr>
                     </thead>
                     <tbody>
@@ -46,10 +49,20 @@
                     {% for objEntidad in objPagina %}
                         <tr {% if loop.index is odd %}class="color"{% endif %}>
                             <td class="text-right"><a href="{{ path('pgCita_consultar', { 'id': objEntidad.coCita, 'blnBandera': '0'}) }}">{{ objEntidad.coCita }}</a></td>
-                            <td>{{ objEntidad.coOrientador }}</td>
+                            <td>{{ objEntidad.coPersona }}</td>
                             <td>{{ objEntidad.coArea }}</td>
-                            <td>{% if objEntidad.fhCreacion %}{{ objEntidad.fhCreacion|date('d-m-Y H:i:s') }}{% endif %}</td>
-                            <td>{% if objEntidad.fhActualizacion %}{{ objEntidad.fhActualizacion|date('d-m-Y H:i:s') }}{% endif %}</td>                            
+                            <td>{{ objEntidad.coEstadoCita }}</td>
+                            <td>{% if objEntidad.feCita %}{{ objEntidad.feCita|date('d-m-Y') }}{% endif %}</td>
+                            <td>{% if objEntidad.hoCita %}{{ objEntidad.hoCita|date('h:i a') }}{% endif %}</td>
+                            <td>{% if objEntidad.fhRegistCita %}{{ objEntidad.fhRegistCita|date('d-m-Y h:i a') }}{% endif %}</td>
+                            <td> 
+                                <a href="{{ path('pgCita', { 'id': objEntidad.coCita, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
+                                    <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                </a>                                    
+                                <a href="{{ path('pgCita', { 'id': objEntidad.coCita }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
+                                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                                </a>                                 
+                            </td>                            
                         </tr>
                     {% endfor %}
                     </tbody>
